Minor Clean up of gradle script and disable consistency plus datagen